# php-opcache-exporter

./: Cargo.toml  Dockerfile
src/: main.rs  opcache.rs
