[package]
name = "php-opcache-exporter-rs"
version = "0.1.0"
authors = ["Matthew Wynn <matthew@matthewwynn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus_exporter_base = { git = "https://github.com/m-wynn/prometheus_exporter_base", branch="alpha19" }
fastcgi-client = { git = "https://github.com/m-wynn/fastcgi-client-rs" }
tokio = "0.2.0-alpha.6"
failure = "0.1.6"
httparse = "1.3.4"
serde_json = "1.0"
log = "0.4.8"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
